package SmartHome.domain.valueObjects.values;

public interface Value {

}